oh it was being put behind stuff lol. Fixed it. Navbar fixed

--- a/a2/style.css
+++ b/a2/style.css
@@ -52,6 +52,7 @@ body {
     overflow: hidden;
     position: sticky;
     top: 0;
+    z-index: 1;
 }
 
 .topnav a {
